# newtua-formats

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  README_ru.md
.cargo/: config.toml
crates/newtua-alz/: Cargo.toml
crates/newtua-alz/src/: lib.rs
crates/newtua-alz/tests/: alz_oracle.rs
crates/newtua-amiga/: Cargo.toml
crates/newtua-amiga/src/: dms.rs  lib.rs  lzx.rs  powerpacker.rs
crates/newtua-amiga/tests/: dms_oracle.rs  lzx_oracle.rs  powerpacker_oracle.rs
crates/newtua-amiga/tests/fixtures/: hello.pp  six.pp
crates/newtua-common/: Cargo.toml
crates/newtua-common/src/: bitreader.rs  bytes.rs  compress.rs  crc16.rs  crc32.rs  deflate.rs  lib.rs  lzss.rs  lzw.rs  md5.rs  prefixcode.rs  rc4.rs  rle90.rs  stuffit_huffman.rs  zipcrypt.rs
crates/newtua-common/tests/: compress.rs  zipcrypt_oracle.rs
crates/newtua-common/tests/fixtures/: clear.z  grow.z
crates/newtua-dos/: Cargo.toml
crates/newtua-dos/src/: arc.rs  arj.rs  crunch.rs  crunch_cpm.rs  crush.rs  distill.rs  lbr.rs  lib.rs  lzh_static.rs  squeeze.rs  zoo.rs
crates/newtua-dos/tests/: arc_oracle.rs  arj_oracle.rs  crunch_lzhuf_oracle.rs  crunch_oracle.rs  distill_oracle.rs  lbr_oracle.rs  squeeze_oracle.rs  zoo_oracle.rs
crates/newtua-dos/tests/fixtures/: clear.arc  cmp.arc  crush.arc  lzw.arc
crates/newtua-mac/: Cargo.toml
crates/newtua-mac/src/: applesingle.rs  binhex.rs  compactpro.rs  des.rs  lib.rs  macbinary.rs  packit.rs
crates/newtua-mac/tests/: applesingle_oracle.rs  binhex_oracle.rs  compactpro_oracle.rs  macbinary_oracle.rs  packit_oracle.rs
crates/newtua-nsis/: Cargo.toml
crates/newtua-nsis/src/: bcj.rs  bzip2.rs  codec.rs  lib.rs  paths.rs  tests.rs
crates/newtua-nsis/tests/: oracle.rs
crates/newtua-stuffit/: Cargo.toml
crates/newtua-stuffit/src/: lib.rs  methods.rs  sit5.rs  stuffit.rs  stuffit13.rs  stuffit15.rs  stuffit5.rs
crates/newtua-stuffit/src/sitx/: blend.rs  brimstone.rs  bwt.rs  cyanide.rs  darkhorse.rs  english.rs  english_dict.deflate  iron.rs  mod.rs  p2.rs  rangecoder.rs  x86.rs
crates/newtua-stuffit/src/sitx/ppmd/: alloc.rs  context.rs  encoder_mirror.rs  mod.rs  rangecoder.rs  variant_g.rs
crates/newtua-stuffit/tests/: sit5_oracle.rs  sitx_oracle.rs  stuffit13_oracle.rs  stuffit15_oracle.rs  stuffit5_oracle.rs  stuffit_oracle.rs
crates/newtua-testutil/: Cargo.toml
crates/newtua-testutil/src/: lib.rs
crates/xad-amiga/: Cargo.toml
crates/xad-amiga/src/: lib.rs  powerpacker.rs
crates/xad-amiga/tests/: powerpacker_oracle.rs
crates/xad-common/: Cargo.toml
crates/xad-common/src/: bitreader.rs  lib.rs  rle90.rs
crates/xad-dos/: Cargo.toml
crates/xad-dos/src/: lib.rs
