# Workspace for the newtua-formats family of legacy archive-format decoders.
# Pure-Rust decoders for legacy archive formats (LGPL-2.1).
[workspace]
resolver = "2"
members = [
    "crates/newtua-common",
    "crates/newtua-dos",
    "crates/newtua-amiga",
]

[workspace.package]
edition = "2021"
rust-version = "1.74"
license = "LGPL-2.1-or-later"
repository = "https://github.com/trankov/newtua-formats"
categories = ["compression", "parser-implementations"]
keywords = ["archive", "decompression", "retro", "legacy"]

[workspace.dependencies]
newtua-common = { path = "crates/newtua-common", version = "0.0.0" }
