# Workspace for the newtua-formats family of legacy archive-format decoders.
# Pure-Rust decoders for legacy archive formats (LGPL-2.1).
[workspace]
resolver = "2"
members = [
    "crates/newtua-common",
    "crates/newtua-dos",
    "crates/newtua-mac",
    "crates/newtua-stuffit",
    "crates/newtua-amiga",
    "crates/newtua-alz",
    "crates/newtua-nsis",
    "crates/newtua-testutil",
]

[workspace.package]
edition = "2021"
rust-version = "1.74"
license = "LGPL-2.1-or-later"
repository = "https://github.com/trankov/newtua-formats"
categories = ["compression", "parser-implementations"]
keywords = ["archive", "decompression", "retro", "legacy"]

[workspace.dependencies]
newtua-common = { path = "crates/newtua-common", version = "0.0.0" }
newtua-testutil = { path = "crates/newtua-testutil" }

# Keep line tables (so panics and test failures still point at a source line)
# but drop full debug info — faster builds and a smaller target/ during the
# tight TDD loop, where we never run a debugger anyway.
#
# `split-debuginfo = "unpacked"` skips the macOS `dsymutil` step on every link.
# With no external dependencies, linking dominates the incremental rebuild, so
# dropping dsymutil is the single biggest per-iteration win here.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
