[package]
name = "newtua-alz"
version = "0.0.0"
description = "Decoder for the ALZip (.alz) archive format."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# Codec exception (see CLAUDE.md): deflate/bzip2 are explicitly out of scope to
# re-implement, so we lean on mature pure-Rust crates rather than porting them.
[dependencies]
newtua-common.workspace = true
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bzip2-rs = "0.1"

[dev-dependencies]
newtua-testutil.workspace = true
# C-backed bzip2, used only to *compress* fixtures for the oracle tests.
bzip2 = "0.4"
