[package]
name = "newtua-amiga"
version = "0.1.0"
description = "Decoders for Amiga compression formats: PowerPacker, Amiga LZX, and DMS."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
newtua-common.workspace = true

[dev-dependencies]
newtua-testutil.workspace = true
