[package]
name = "newtua-common"
version = "0.0.0"
description = "Shared low-level primitives (bit readers, prefix/Huffman codes, LZSS window, RLE90, CRC) for the newtua-formats family of legacy archive-format decoders."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
