[package]
name = "newtua-dos"
version = "0.1.0"
description = "Decoders for DOS/CP-M era archive formats: Squeeze, ARC, LBR, Crunch, Zoo, ARJ."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
newtua-common.workspace = true

[dev-dependencies]
newtua-testutil.workspace = true
