[package]
name = "newtua-mac"
version = "0.0.0"
description = "Decoders for classic Macintosh archive/encoding formats: BinHex."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
newtua-common.workspace = true

[dev-dependencies]
newtua-testutil.workspace = true
