[package]
name = "newtua-mac"
version = "0.1.0"
description = "Decoders for classic Macintosh archive/encoding formats: BinHex, MacBinary/AppleSingle/AppleDouble, Compact Pro, PackIt."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
newtua-common.workspace = true

[dev-dependencies]
newtua-testutil.workspace = true
