[package]
name = "newtua-stuffit"
version = "0.0.0"
description = "Decoders for the StuffIt family of classic Macintosh archives (classic .sit; StuffIt 5 / StuffItX planned)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
newtua-common.workspace = true

[dev-dependencies]
newtua-testutil.workspace = true
