[package]
name = "xad-amiga"
version = "0.0.0"
description = "Decoders for Amiga compression formats (PowerPacker, Amiga LZX, DMS), ported from The Unarchiver's XADMaster."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
